<resources>
    <string name="menuItem_toggleSpeed">Speed %1$d %%</string>
    <string name="menuItem_slotSave">Save slot</string>
    <string name="menuItem_slotLoad">Load slot</string>
    <string name="menuItem_setSlot">Slot %1$d</string>
    <string name="menuItem_selectSlot">Select Slot</string>
    <string name="menuItem_fileSave">Save to file…</string>
    <string name="menuItem_fileLoad">Load from file…</string>
    <string name="menuItem_fileLoadAutoSave">Load from auto save…</string>
    <string name="menuItem_screenshot">Screenshot</string>
    <string name="menuItem_setSpeed">Game speed</string>
    <string name="menuItem_enableFramelimiter">Sync audio</string>
    <string name="menuItem_disableFramelimiter">Desync audio</string>
    <string name="menuItem_player_one">Player 1</string>
    <string name="menuItem_player_two">Player 2</string>
    <string name="menuItem_player_three">Player 3</string>
    <string name="menuItem_player_four">Player 4</string>
    <string name="menuItem_paks">Controller Paks</string>
    <string name="menuItem_pak_empty">Empty</string>
    <string name="menuItem_pak_mem">Memory Pak</string>
    <string name="menuItem_pak_rumble">Rumble Pak</string>
    <string name="menuItem_setIme">Change IME</string>
    <string name="menuItem_exit">Exit</string>
    <string name="menuItem_deadzone">Deadzone</string>
    <string name="menuItem_sensitivity">Sensitivity</string>
    <string name="menuItem_sensitivity_x">X-axis Sensitivity</string>
    <string name="menuItem_sensitivity_y">Y-axis Sensitivity</string>
    <string name="menuItem_unmapAll">Unmap all</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_play">Play</string>
    <string name="menuItem_refreshRoms">Refresh ROMs</string>
    <string name="menuItem_settings">Settings</string>
    <string name="menuItem_globalSettings">Global settings</string>
    <string name="menuItem_sensorConfiguration">Sensor configuration</string>
    <string name="menuItem_profiles">Profiles</string>
    <string name="menuItem_emulationProfiles">Emulation profiles</string>
    <string name="menuItem_touchscreenProfiles">Touchscreen profiles</string>
    <string name="menuItem_controllerProfiles">Controller profiles</string>
    <string name="menuItem_customCheats">Custom cheats</string>
    <string name="menuItem_help">Help</string>
    <string name="menuItem_faq">FAQ</string>
    <string name="menuItem_helpForum">Help forum</string>
    <string name="menuItem_controllerDiagnostics">Controller diagnostics</string>
    <string name="menuItem_reportBug">Report bug</string>
    <string name="menuItem_about">About</string>
    <string name="menuItem_credits">Credits</string>
    <string name="menuItem_appVersion">App version</string>
    <string name="menuItem_changelog">Changelog</string>
    <string name="menuItem_logcat">Logcat</string>
    <string name="menuItem_hardwareInfo">Hardware info</string>
    <string name="menuItem_Tools">Tools</string>
    <string name="menuItem_Extract">Add Texture Pack</string>
    <string name="menuItem_Clear">Clear Texture Packs/Caches</string>
    <string name="menuItem_localeOverride">Language</string>
    <string name="menuItem_new">New</string>
    <string name="menuItem_hideBuiltins">Hide built-ins</string>
    <string name="menuItem_showBuiltins">Show built-ins</string>
    <string name="popup_titleBuiltin">%1$s (built-in)</string>
    <string name="popup_titleCustom">%1$s</string>
    <string name="profile_name_cannot_be_empty">Name cannot be empty</string>
    <string name="profile_name_cannot_contain_brackets">Name cannot contain brackets</string>
    <string name="profile_name_must_be_unique">Name must be unique</string>
    <string name="profile_manage_profiles">Manage profiles</string>
    <string name="popup_faq">Mupen64Plus is developed and maintained by volunteers.<small>\n\nTo fix graphical glitches, try changing the <i>video plugin</i>.\n\nTo fix lag, try changing the <i>video frameskip</i> setting or the <i>video plugin</i>.\n\nFor unplayable ROMS, try unzipping the ROM first or trying a different version of the ROM.\n\nFor touchscreen control issues, try changing the <i>button scale</i> or <i>button layout</i>.\n\nFor other issues, or if you\'re still stuck, please click the <i>FAQ</i> button below.  For non-game-specific bugs, click the <i>Report bug</i> button below.  We respond to the vast majority of posts within 24 hours.  Honest.\n\n</small>Thank you for helping us improve the app!</string>
    <string name="popup_version">Version: %1$s\nVersion code: %2$d</string>
    <string name="listItem_setDefault">Set default</string>
    <string name="listItem_unsetDefault">Unset default</string>
    <string name="listItem_edit">Edit</string>
    <string name="listItem_rename">Rename</string>
    <string name="listItem_copy">Copy</string>
    <string name="listItem_delete">Delete</string>
    <string name="listItem_disabled">(Disabled)</string>
    <string name="hint_profileName">Profile name</string>
    <string name="hint_profileComment">Description (optional)</string>
    <string name="toast_rebuildingCheats">Rebuilding cheats database…</string>
    <string name="toast_launchingEmulator">Launching emulator…</string>
    <string name="toast_loadingSession">Auto-resuming game…</string>
    <string name="toast_savingSession">Auto-saving game…</string>
    <string name="toast_loadingSlot">Loading slot %1$d…</string>
    <string name="toast_savingSlot">Saving slot %1$d…</string>
    <string name="toast_loadingFile">Loading %1$s…</string>
    <string name="toast_savingFile">Saving %1$s…</string>
    <string name="toast_overwritingFile">Overwriting %1$s…</string>
    <string name="toast_loadingGameInfo">Loading game info…</string>
    <string name="toast_savingScreenshot">Saving screenshot…</string>
    <string name="toast_canceling">Canceling…</string>
    <string name="toast_pleaseWait">Please wait…</string>
    <string name="toast_nativeMainFailure01">Failed to parse initial command line parameters.</string>
    <string name="toast_nativeMainFailure02">Failed to attach core library.</string>
    <string name="toast_nativeMainFailure03">Failed to start core library.</string>
    <string name="toast_nativeMainFailure04">Failed to open configuration handles.</string>
    <string name="toast_nativeMainFailure05">Failed to parse final command line parameters.</string>
    <string name="toast_nativeMainFailure06">Cannot use --core-compare feature with this Mupen64Plus core library.</string>
    <string name="toast_nativeMainFailure07">Failed to open ROM file for reading.</string>
    <string name="toast_nativeMainFailure08">Failed to allocate buffer for ROM image file.</string>
    <string name="toast_nativeMainFailure09">Failed to read bytes from ROM image file.</string>
    <string name="toast_nativeMainFailure10">Core failed to open ROM image file.</string>
    <string name="toast_nativeMainFailure11">Listed cheats as requested.</string>
    <string name="toast_nativeMainFailure12">Failed to load plugins.</string>
    <string name="toast_nativeMainFailure13">Core failed to attach plugin.</string>
    <string name="toast_nativeMainFailureUnknown">Unknown launch error.</string>
    <string name="toast_usingSlot">Now using slot %1$d.</string>
    <string name="toast_sdInaccessible">App data missing, attempting to reload.</string>
    <string name="actionResume_title">Resume</string>
    <string name="actionResume_summary">Unpredictable if cheats are used</string>
    <string name="actionRestart_title">Restart</string>
    <string name="actionRestart_summary">Recommended if cheats are used</string>
    <string name="actionWiki_title">Wiki</string>
    <string name="actionWiki_summary">Community help for this game</string>
    <string name="actionReloadAssets_title">Reload app resources</string>
    <string name="actionReloadAssets_summary">Does NOT affect user settings, ROMs, game saves, or other custom data</string>
    <string name="actionResetUserPrefs_title">Defaults</string>
    <string name="actionResetUserPrefs_summary">Restore default global settings</string>
    <string name="actionResetUserPrefs_popupMessage">Reset all global preferences to their defaults?</string>
    <string name="actionResetGamePrefs_title">Defaults</string>
    <string name="actionResetGamePrefs_summary">Restore default game settings</string>
    <string name="actionResetGamePrefs_popupMessage">Reset all game preferences to their defaults?<small>\n\nAny manual modifications you may have made to the config file will be overwritten.</small></string>
    <string name="actionCheatEditor_title">Manage cheat codes</string>
    <string name="actionCheatEditor_summary">Add, modify, and delete custom cheats</string>
    <string name="actionShare_title">Share</string>
    <string name="screenGlobalSettings_title">Global settings</string>
    <string name="screenGlobalSettings_summary">Display, audio, storage, and debug settings</string>
    <string name="screenCheats_title">Cheats</string>
    <string name="screenCheats_summaryEnabled">Enabled</string>
    <string name="screenCheats_summaryDisabled">Disabled</string>
    <string name="categoryCheats_title">Cheat options (long-press for notes)</string>
    <string name="categoryGln64_title">Gln64 settings</string>
    <string name="categoryRice_title">Rice settings</string>
    <string name="categoryGlide64_title">Glide64 settings</string>
    <string name="categoryGliden64_title">GlideN64 settings</string>
    <string name="categoryAngrylion_title">Angrylion settings</string>
    <string name="categoryLibrary_title">Library</string>
    <string name="categoryDisplay_title">Display</string>
    <string name="categoryAudio_title">Audio</string>
    <string name="categoryTouchscreen_title">Touchscreen</string>
    <string name="categoryInput_title">Input</string>
    <string name="categoryData_title">Data</string>
    <string name="categoryGameSettings_title">Game-specific settings</string>
    <string name="categoryGameSettings_titleNamed">%1$s settings</string>
    <string name="playShowCheats_title">Enable cheats</string>
    <string name="touchscreenFeedback_title">Haptic feedback</string>
    <string name="touchscreenFeedback_summary">Vibrate on button press</string>
    <string name="displayImmersiveMode_title">Immersive mode</string>
    <string name="displayImmersiveMode_summary">Completely hide navigation and status bars</string>
    <string name="displayOrientation_title">Screen orientation</string>
    <string name="displayPosition_title">Vertical screen position</string>
    <string name="displayResolution_title">Rendered resolution</string>
    <string name="displayFps_title">Framerate</string>
    <string name="displayFps_summary">Display FPS on screen</string>
    <string name="videoHardwareType_title">Flicker reduction</string>
    <string name="videoPolygonOffset_title">Polygon offset</string>
    <string name="videoPolygonOffset_summary">Custom flicker reduction bias</string>
    <string name="displayZoom_title">Zoom</string>
    <string name="displayActionBarTransparency_title">Action bar opacity</string>
    <string name="playerMap_title">Multi-player</string>
    <string name="playerMap_summary">Define each player\'s controller(s)</string>
    <string name="emulationProfile_title">Emulation profile</string>
    <string name="touchscreenProfile_title">Touchscreen profile</string>
    <string name="controllerProfile1_title">Controller 1 profile</string>
    <string name="controllerProfile2_title">Controller 2 profile</string>
    <string name="controllerProfile3_title">Controller 3 profile</string>
    <string name="controllerProfile4_title">Controller 4 profile</string>
    <string name="cheatEditor_hint_value">Value</string>
    <string name="cheatEditor_hint_value_description">Description</string>
    <string name="cheatEditor_remove_option">Remove option</string>
</resources>