<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screenPlayMenuActivity" >

    <Preference
        android:icon="@drawable/ic_play"
        android:key="actionResume"
        android:summary="@string/actionResume_summary"
        android:title="@string/actionResume_title" />
    <Preference
        android:icon="@drawable/ic_undo"
        android:key="actionRestart"
        android:summary="@string/actionRestart_summary"
        android:title="@string/actionRestart_title" />
    <Preference
        android:icon="@drawable/ic_settings"
        android:key="screenGlobalSettings"
        android:summary="@string/screenGlobalSettings_summary"
        android:title="@string/screenGlobalSettings_title" >
        <intent android:action=".SettingsGlobalActivity" />
    </Preference>

    <PreferenceCategory
        android:key="categoryGameSettings"
        android:title="@string/categoryGameSettings_title" >
        <paulscode.android.mupen64plusae.persistent.PlayerMapPreference
            android:icon="@drawable/ic_users"
            android:key="playerMap"
            android:summary="@string/playerMap_summary"
            android:title="@string/playerMap_title" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_key"
        android:key="playShowCheats"
        android:summary="@string/playShowCheats_summary"
        android:title="@string/playShowCheats_title" />

    <PreferenceCategory
        android:key="categoryCheats"
        android:title="@string/categoryCheats_title" />

</PreferenceScreen>