<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuItem_play"
        android:icon="@drawable/ic_play"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuItem_play"/>
    <item
        android:id="@+id/menuItem_settings"
        android:icon="@drawable/ic_settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuItem_settings">
        <menu>
            <group>
                <item
                    android:id="@+id/menuItem_gameSettings"
                    android:title="@string/menuItem_gameSettings"/>
                <item
                    android:id="@+id/menuItem_globalSettings"
                    android:title="@string/menuItem_globalSettings"/>
                <item
                    android:id="@+id/menuItem_touchscreenProfiles"
                    android:title="@string/menuItem_touchscreenProfiles"/>
                <item
                    android:id="@+id/menuItem_controllerProfiles"
                    android:title="@string/menuItem_controllerProfiles"/>
                <item
                    android:id="@+id/menuItem_customCheats"
                    android:title="@string/menuItem_customCheats"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_help"
        android:icon="@drawable/ic_help"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuItem_help">
        <menu>
            <group>
                <item
                    android:id="@+id/menuItem_faq"
                    android:title="@string/menuItem_faq"/>
                <item
                    android:id="@+id/menuItem_helpForum"
                    android:title="@string/menuItem_helpForum"/>
                <item
                    android:id="@+id/menuItem_controllerDiagnostics"
                    android:title="@string/menuItem_controllerDiagnostics"/>
                <item
                    android:id="@+id/menuItem_reportBug"
                    android:title="@string/menuItem_reportBug"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_about"
        android:icon="@drawable/ic_about"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuItem_about">
        <menu>
            <group>
                <item
                    android:id="@+id/menuItem_appVersion"
                    android:title="@string/menuItem_appVersion"/>
                <item
                    android:id="@+id/menuItem_changelog"
                    android:title="@string/menuItem_changelog"/>
                <item
                    android:id="@+id/menuItem_axisInfo"
                    android:title="@string/menuItem_axisInfo"/>
                <item
                    android:id="@+id/menuItem_controllerInfo"
                    android:title="@string/menuItem_controllerInfo"/>
                <item
                    android:id="@+id/menuItem_systemInfo"
                    android:title="@string/menuItem_systemInfo"/>
                <item
                    android:id="@+id/menuItem_credits"
                    android:title="@string/menuItem_credits"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menuItem_localeOverride"
        android:icon="@drawable/ic_location"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menuItem_localeOverride"/>

</menu>