<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mupen64="http://schemas.android.com/apk/res/org.mupen64plusae.v3.alpha"
    android:key="screenRoot" >

    <paulscode.android.mupen64plusae.preference.CompatListPreference
        android:defaultValue="@string/displayResolution_default"
        android:entries="@array/displayResolution_entries"
        android:entryValues="@array/displayResolution_values"
        android:icon="@drawable/ic_display"
        android:key="displayResolution"
        android:summary="@string/selectedValue"
        android:title="@string/displayResolution_title" />
    <paulscode.android.mupen64plusae.preference.CompatListPreference
        android:defaultValue="@string/displayZoom_default"
        android:entries="@array/displayZoom_entries"
        android:entryValues="@array/displayZoom_values"
        android:icon="@drawable/ic_display"
        android:key="displayZoom"
        android:summary="@string/selectedValue"
        android:title="@string/displayZoom_title" />

    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_circuit"
        android:key="emulationProfile"
        android:summary="@string/selectedValue"
        android:title="@string/emulationProfile_title"
        mupen64:allowDisable="false"
        mupen64:managerAction=".profile.ManageEmulationProfilesActivity" />
    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_phone"
        android:key="touchscreenProfile"
        android:summary="@string/selectedValue"
        android:title="@string/touchscreenProfile_title"
        mupen64:allowDisable="true"
        mupen64:managerAction=".profile.ManageTouchscreenProfilesActivity" />
    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_gamepad"
        android:key="controllerProfile1"
        android:summary="@string/selectedValue"
        android:title="@string/controllerProfile1_title"
        mupen64:allowDisable="true"
        mupen64:managerAction=".profile.ManageControllerProfilesActivity" />
    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_gamepad"
        android:key="controllerProfile2"
        android:summary="@string/selectedValue"
        android:title="@string/controllerProfile2_title"
        mupen64:allowDisable="true"
        mupen64:managerAction=".profile.ManageControllerProfilesActivity" />
    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_gamepad"
        android:key="controllerProfile3"
        android:summary="@string/selectedValue"
        android:title="@string/controllerProfile3_title"
        mupen64:allowDisable="true"
        mupen64:managerAction=".profile.ManageControllerProfilesActivity" />
    <paulscode.android.mupen64plusae.preference.ProfilePreference
        android:icon="@drawable/ic_gamepad"
        android:key="controllerProfile4"
        android:summary="@string/selectedValue"
        android:title="@string/controllerProfile4_title"
        mupen64:allowDisable="true"
        mupen64:managerAction=".profile.ManageControllerProfilesActivity" />

    <paulscode.android.mupen64plusae.preference.PlayerMapPreference
        android:icon="@drawable/ic_users"
        android:key="playerMap"
        android:summary="@string/playerMap_summary"
        android:title="@string/playerMap_title" />

    <android.support.v7.preference.PreferenceScreen
        android:icon="@drawable/ic_key"
        android:key="screenCheats"
        android:title="@string/screenCheats_title" >
        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="playShowCheats"
            android:title="@string/playShowCheats_title" />

        <android.support.v7.preference.Preference
            android:key="actionCheatEditor"
            android:summary="@string/actionCheatEditor_summary"
            android:title="@string/actionCheatEditor_title" >
        </android.support.v7.preference.Preference>

        <android.support.v7.preference.PreferenceCategory
            android:key="categoryCheats"
            android:title="@string/categoryCheats_title" />
    </android.support.v7.preference.PreferenceScreen>

    <android.support.v7.preference.Preference
        android:icon="@drawable/ic_help"
        android:key="actionWiki"
        android:summary="@string/actionWiki_summary"
        android:title="@string/actionWiki_title" />
    <android.support.v7.preference.Preference
        android:icon="@drawable/ic_undo"
        android:key="actionResetGamePrefs"
        android:summary="@string/actionResetGamePrefs_summary"
        android:title="@string/actionResetGamePrefs_title" />

    <android.support.v7.preference.PreferenceCategory>
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>